2006-09-13  Andrew Pinski  <pinskia@physics.uc.edu>

PR debug/28980
        * dwarf2out.c (loc_descriptor_from_tree_1): Handle
        FUNCTION_DECL.

2006-09-13  Andrew Pinski  <pinskia@physics.uc.edu>

	PR debug/28980
        * gcc.c-torture/compile/debugvlafunction-1.c: New test.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116939 138bc75d-0d04-0410-961f-82ee72b054a4